Added Files Successfully

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 ImageandAnchortags.html
 structure.html
 tagsandemmet.html
+EducationalWebsite.html
+EducationalWebsite.css
+bg-contact.jpg
+Devlogo.png
+githubicon.jpg
